--- a/index.html
+++ b/index.html
@@ -60,5 +60,149 @@
             </div>
         </div>
     </section>
+
+    <section id="checkout_area">
+        <div class="content">
+            <form class="inner_checkout inner">
+                <div class="child_checkout">
+                   <i class="fa-regular fa-calendar-check"></i>
+                   <h5>Check-In</h5>
+                   <input type="date"> 
+                </div>
+                 <div class="child_checkout">
+                   <i class="fa-regular fa-calendar-check"></i>
+                   <h5>Check-Out</h5>
+                   <input type="date"> 
+                 </div>
+                 <div class="child_checkout">
+                    <i class="fa-solid fa-user"></i>
+                    <h5>Person</h5>
+                    <select name="" id="">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                        <option value="">4</option>
+                        <option value="">5</option>
+                    </select>
+                 </div>
+                 <div class="child_checkout">
+                    <input type="Submit" value="Check-Out">
+                 </div>
+            </form>
+        </div>
+    </section>
+
+    <section id="about_area">
+        <div class="inner content">
+            <img src="img/about_image.jpg" alt="">
+            <div class="inner_about">
+                <h5>About Us</h5>
+                <h2>The <strong>best Holidays</strong> <br>
+                    Starts Here!
+                </h2>
+                <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis culpa nesciunt minus obcaecati error eveniet distinctio consectetur enim architecto.</P>
+                <p></p><a href="#" class="btn">Read More</a></p>
+            </div>
+        </div>
+    </section>
+
+    <section id="why_area">
+        <div class="smcontent center">
+            <h2>Why you <strong>Choose us!</strong></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, aspernatur. Recusandae dolorem itaque at esse fugiat?</p>
+        </div>
+        <div class="inner content">
+            <div class="child_why">
+                <img src="img/Breakfast.png" alt="">
+                <h3>Breakfast</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, reprehenderit!</p>
+            </div>
+            <div class="child_why">
+                <img src="img/wifi.png" alt="">
+                <h3>Wifi</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, reprehenderit!</p>
+            </div>
+            <div class="child_why">
+                <img src="img/swimming.png" alt="">
+                <h3>Swimming</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, reprehenderit!</p>
+            </div>
+            <div class="child_why">
+                <img src="img/gym.png" alt="">
+                <h3>Gym</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, reprehenderit!</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="living_room">
+        <div class="smcontent center">
+            <h5>Our Living Room</h5>
+            <h2>The <strong>most memorable rest</strong> <br>
+                time starts here
+            </h2>
+        </div>
+        <div class="inner content">
+            <div class="child_living">
+                <img src="img/service_01.jpg" alt="">
+                <div class="inner_living">
+                    <h3>Deluxe Room</h3>
+                    <h4>Starting from: <strong>$50/Night</strong></h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias sequi odio similique suscipit quas molestiae nam!</p>
+                    <p><a href="#" class="btn">Read More</a></p>
+                </div>
+            </div>
+             <div class="child_living">
+                <img src="img/service_02.jpg" alt="">
+                <div class="inner_living">
+                    <h3>Classic Room</h3>
+                    <h4>Starting from: <strong>$100/Night</strong></h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias sequi odio similique suscipit quas molestiae nam!</p>
+                    <p><a href="#" class="btn">Read More</a></p>
+                </div>
+            </div>
+             <div class="child_living">
+                <img src="img/service_03.jpg" alt="">
+                <div class="inner_living">
+                    <h3>Double Room</h3>
+                    <h4>Starting from: <strong>$150/Night</strong></h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias sequi odio similique suscipit quas molestiae nam!</p>
+                    <p><a href="#" class="btn">Read More</a></p>
+                </div>
+             </div>
+        </div>
+    </section>
+
+    <section id="content_area">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.345537052153!2d3.348462373806948!3d6.603912293389993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b936a9d27184d%3A0x7b519bccfca457cd!2sGOMYCODE%20Ikeja!5e0!3m2!1sen!2sng!4v1761130768871!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="inner_content">
+            <div class="child_contact content">
+                <div class="main_content">
+                    <h5>Stay in Touch</h5>
+                    <h2>Contact Us</h2>
+                     <p><i class="fa-solid fa-location-dot"></i>123, Your State, City, Country - 1216</p>
+                     <p><i class="fa-solid fa-phone"></i>+234 816 320 7400</p>
+                     <p><i class="fa-solid fa-envelope"></i>info@gomycode.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="footer_area">
+        <div class="inner content">
+            <div class="social_area">
+                 <ul class="ul">
+                        <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    </ul>
+                </div>
+                <div class="copyright_area">
+                    <p>&copy; All rights Reserved.</p>
+                </div>
+        </div>
+    </footer>
 </body>
 </html>
