--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     Starts Here!
                 </h2>
                 <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis culpa nesciunt minus obcaecati error eveniet distinctio consectetur enim architecto.</P>
-                <p></p><a href="#" class="btn">Read More</a></p>
+                <p><a href="#" class="btn">Read More</a></p>
             </div>
         </div>
     </section>
@@ -173,7 +173,7 @@
         </div>
     </section>
 
-    <section id="content_area">
+    <section id="contact_area">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.345537052153!2d3.348462373806948!3d6.603912293389993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b936a9d27184d%3A0x7b519bccfca457cd!2sGOMYCODE%20Ikeja!5e0!3m2!1sen!2sng!4v1761130768871!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="inner_content">
             <div class="child_contact content">
